--- a/css/main.scss
+++ b/css/main.scss
@@ -9,10 +9,12 @@
 /* components */
 
 @import './components/hero';
+@import './components/hero-header';
 @import './components/best';
 @import './components/reviews';
 @import './components/team';
 @import './components/form';
 @import './components/contact';
 @import './components/menu';
+@import './components/slider';
 
