--- a/css/components/menu.scss
+++ b/css/components/menu.scss
@@ -12,11 +12,13 @@
 
 .section__title_white{
 	color: white;
+}
+
+.menu__title{
 	margin: 0;
 	position: absolute;
 	top: rem(150px);left: rem(100px);
 }
-
 
 
 .accordeon-2{
@@ -69,6 +71,8 @@
 	font-family: gagalin;
 	font-size:rem(40px);
 	writing-mode:vertical-lr;
+	user-select: none;
+	pointer-events: none;
 
 	@include tablets {
 		font-size:rem(20px);
@@ -118,6 +122,7 @@
 
 
 .accordeon-2__list_active{
+		transition:1s;
 	.accordeon-2__text{
 		width: 100%;
 		max-width: rem(540px);
@@ -127,7 +132,6 @@
 		@include tablets {
 			padding: rem(50px) rem(20px) rem(20px ) rem(20px );
 		}
-
 	}
 }
 
