--- a/css/components/reviews.scss
+++ b/css/components/reviews.scss
@@ -66,6 +66,7 @@
 
 	@include tablets {
 		margin-bottom: rem(15px);
+		user-select: none;
 	}
 
 	@include mobile {
@@ -122,4 +123,80 @@
 	@include mobile {
 		display:inline-block;
 	}
+}
+
+
+
+
+
+/* MODAL */
+
+
+
+
+
+.modal-reviews{
+	display: none;
+	position: fixed;
+	top: 0;left: 0;
+	width: 100%;height: 100%;
+	background-color: rgba(46,49,51, 0.95);
+	justify-content: center;
+	align-items: center;
+	z-index: 90;
+}
+
+
+.modal-reviews__wrap{
+	width:rem(460px);
+	max-height: 70vh;
+	background-color: #fff;
+	padding: rem(25px) rem(20px);
+	z-index: 100;
+	position: relative; 
+	border-radius:5px;
+	color: #222;
+	font-size: rem(14px);
+	line-height: rem(24px);
+	overflow-y: auto;
+	transition:0.8s;
+
+	@include tablets {
+		width:rem(360px);
+		margin: 0 rem(20px);
+	}
+}
+
+
+
+
+.close{
+	display:block;
+	position: absolute;
+	width: 20px;height: 4px;
+	background-color: $orange;
+	border-radius:5px;
+	top: rem(20px);right: rem(15px);
+	transform: rotate(45deg);
+	cursor: pointer;
+
+	&::before{
+		content:'';
+		display:block;
+		width: 20px;height: 4px;
+		background-color: $orange;
+		border-radius:5px;
+		transform: rotate(90deg);
+	}
+}
+
+
+.h_modal{
+	margin-bottom: rem(25px); 
+	font-weight: bold;
+	font-family: Gagalin;
+}
+
+.t_modal{
+	font-family: ubuntu;
 }
