--- a/css/components/form.scss
+++ b/css/components/form.scss
@@ -255,7 +255,45 @@
 }
 
 
+/* MODAL */
 
+
+
+.modal-form{
+	position: fixed;
+	display: none;
+	top: 0;left: 0;
+	width: 100%; height: 100%;
+	background-color: rgba(46,49,51, 0.95);
+	justify-content: center;
+	align-items: center;
+	z-index: 90;
+}
+
+
+.modal-form__wrap{
+	width: rem(200px);
+	height: rem(110px);
+	background-color: #fff;
+	border-radius:rem(5px);
+	display:flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 10px;
+}
+
+
+
+
+.modal-form__h{
+	font-family: Ubuntu-Light;
+	font-size: rem(14px);
+	line-height: rem(18px);
+	text-align: center;
+	color:#222;
+	margin-bottom: rem(10px);
+}
 
 
 
