--- a/css/components/menu.scss
+++ b/css/components/menu.scss
@@ -73,11 +73,13 @@
 	writing-mode:vertical-lr;
 	user-select: none;
 	pointer-events: none;
+	transition: 0.4s;
 
 	@include tablets {
 		font-size:rem(20px);
 	}
 }
+
 
 
 
@@ -122,7 +124,9 @@
 
 
 .accordeon-2__list_active{
-		transition:1s;
+	.accordeon-2__headline{
+		color:$yellow;
+	}	
 	.accordeon-2__text{
 		width: 100%;
 		max-width: rem(540px);
