--- a/css/main.css
+++ b/css/main.css
@@ -1541,6 +1541,41 @@ img {
   border-radius: 50%;
 }
 
+/* MODAL */
+.modal-form {
+  position: fixed;
+  display: none;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 49, 51, 0.95);
+  justify-content: center;
+  align-items: center;
+  z-index: 90;
+}
+
+.modal-form__wrap {
+  width: 12.5rem;
+  height: 6.875rem;
+  background-color: #fff;
+  border-radius: 0.3125rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+
+.modal-form__h {
+  font-family: Ubuntu-Light;
+  font-size: 0.875rem;
+  line-height: 1.125rem;
+  text-align: center;
+  color: #222;
+  margin-bottom: 0.625rem;
+}
+
 .contact {
   background: transparent url("../img/contact__bg.jpg") center center no-repeat;
   background-size: cover;
@@ -1723,6 +1758,7 @@ img {
   writing-mode: vertical-lr;
   user-select: none;
   pointer-events: none;
+  transition: 0.4s;
 }
 @media screen and (max-width: 768px) {
   .accordeon-2__headline {
@@ -1764,8 +1800,8 @@ img {
   }
 }
 
-.accordeon-2__list_active {
-  transition: 1s;
+.accordeon-2__list_active .accordeon-2__headline {
+  color: #FFAB3F;
 }
 .accordeon-2__list_active .accordeon-2__text {
   width: 100%;
