--- a/css/main.scss
+++ b/css/main.scss
@@ -17,4 +17,4 @@
 @import './components/contact';
 @import './components/menu';
 @import './components/slider';
-
+@import './components/video-sec';
