--- a/css/settings/base.scss
+++ b/css/settings/base.scss
@@ -2,13 +2,25 @@
 
 
 
-body{
+
+.mainContent{
+	height: 100vh;
+	width: 100%;
 	position: relative;
 }
 
-.wrapper{
-	overflow-x: hidden; 
+
+
+body{
 	position: relative;
+	height: 100%;
+	width: 100%;
+	overflow-y: hidden;
+}
+
+.wrapper{
+	position: relative;
+	height: 100%;
 }
 
 .pagination{
@@ -21,6 +33,9 @@ body{
 	}
 }
 
+
+
+
 .pag__point{
 	position: relative;
 	width: rem(6px);
@@ -29,6 +44,7 @@ body{
 	display: block;
 	margin: rem(15px);
 	border-radius:50%;
+	transition: 0.3s;
 
 	&::before{
 		content:'';
@@ -47,11 +63,22 @@ body{
 		display:none;
 	}
 
-	&:hover::before{
-		opacity:1;
+	&:hover{
+		background-color: $orange;
+
+		&::before{
+			opacity:1;
+			border-color: $orange;
+		}
 	}
 }
 
+
+.pagination-active{
+	&::before{
+		opacity:1;
+	}
+}
 
 
 
@@ -59,6 +86,8 @@ body{
 	min-height: rem(700px);
 	height: 100vh;
 	min-width: rem(320px);
+	position: relative;
+	
 }
 
 
