--- a/css/main.css
+++ b/css/main.css
@@ -377,13 +377,22 @@ template {
   box-sizing: border-box;
 }
 
-body {
+.mainContent {
+  height: 100vh;
+  width: 100%;
   position: relative;
 }
 
-.wrapper {
-  overflow-x: hidden;
+body {
   position: relative;
+  height: 100%;
+  width: 100%;
+  overflow-y: hidden;
+}
+
+.wrapper {
+  position: relative;
+  height: 100%;
 }
 
 .pagination {
@@ -405,6 +414,7 @@ body {
   display: block;
   margin: 0.9375rem;
   border-radius: 50%;
+  transition: 0.3s;
 }
 .pag__point::before {
   content: "";
@@ -424,7 +434,15 @@ body {
     display: none;
   }
 }
+.pag__point:hover {
+  background-color: #F15224;
+}
 .pag__point:hover::before {
+  opacity: 1;
+  border-color: #F15224;
+}
+
+.pagination-active::before {
   opacity: 1;
 }
 
@@ -432,6 +450,7 @@ body {
   min-height: 43.75rem;
   height: 100vh;
   min-width: 20rem;
+  position: relative;
 }
 
 .container {
@@ -1595,6 +1614,7 @@ img {
   background-size: cover;
   bottom: 0;
   left: 0;
+  color: white;
 }
 @media screen and (max-width: 480px) {
   .footer {
@@ -2140,6 +2160,206 @@ img {
   .chiken-img {
     padding-bottom: 1.25rem;
   }
+}
+
+@media screen and (max-width: 480px) {
+  .slider__title {
+    font-size: 2.1875rem;
+    line-height: 2.375rem;
+    margin-bottom: 0.625rem;
+  }
+}
+
+.video-sec {
+  background: #222 url("../img/video-sec__bg.jpg") center no-repeat;
+  background-size: cover;
+}
+
+.video-cont {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+}
+@media screen and (max-width: 768px) {
+  .video-cont {
+    justify-content: center;
+    align-items: center;
+    height: 80%;
+  }
+}
+
+.video_wrap {
+  max-height: 40.625rem;
+  position: relative;
+  border-radius: 10px;
+  overflow: hidden;
+}
+@media screen and (max-width: 768px) {
+  .video_wrap {
+    overflow: visible;
+    border-radius: 0px;
+  }
+}
+
+#video {
+  width: 100%;
+  height: 100%;
+}
+
+.controls {
+  background-color: #222;
+  height: 3.125rem;
+  padding: 5px;
+  display: flex;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  z-index: 20;
+}
+@media screen and (max-width: 768px) {
+  .controls {
+    bottom: -2.8125rem;
+  }
+}
+
+.box {
+  display: inline-block;
+  padding: 5px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.play {
+  display: block;
+  width: 0px;
+  height: 0px;
+  border: 10px solid transparent;
+  border-left: 15px solid #626262;
+}
+
+.pause {
+  display: block;
+  width: 0.25rem;
+  height: 1.25rem;
+  background-color: #626262;
+  border-radius: 5px;
+}
+
+.pause:before {
+  content: "";
+  display: block;
+  width: 0.25rem;
+  height: 1.25rem;
+  background-color: #626262;
+  border-radius: 5px;
+  transform: translateX(12px);
+}
+
+.pause-box {
+  padding-right: 26px;
+}
+
+/* progress-bar */
+.box-bar {
+  display: flex;
+  width: 95%;
+  margin: 0.625rem;
+}
+
+.box-bar:hover .progress_1:after {
+  opacity: 1;
+}
+
+.progress-bar {
+  display: block;
+  width: 100%;
+  height: 0.25rem;
+  background-color: rgba(125, 125, 125, 0.4);
+  position: relative;
+}
+
+.progress_1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  display: block;
+  width: 0%;
+  height: 0.25rem;
+  background-color: #F15224;
+}
+
+.progress_1:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: -5px;
+  transform: translateY(-50%);
+  width: 0.625rem;
+  height: 0.625rem;
+  border-radius: 50%;
+  background-color: #F15224;
+  opacity: 0;
+  transition: 0.3s;
+}
+
+/* VOLUME */
+#volume {
+  width: 3.75rem;
+  height: 0.3125rem;
+  -webkit-appearance: none;
+  border-radius: 5px;
+  background-color: #222;
+  box-shadow: inset 0 1px 5px gray;
+  outline: none;
+  cursor: pointer;
+}
+
+#volume::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 10px;
+  height: 10px;
+  background-color: #fff;
+  border-radius: 50%;
+  background-color: #000;
+  box-shadow: inset 0 1px 7px white;
+}
+
+.icon-volume {
+  margin-right: 0.625rem;
+  cursor: pointer;
+}
+
+.volume-box {
+  cursor: auto;
+}
+
+/* modal */
+.modal-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 10;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon-play {
+  font-size: 5rem;
+  cursor: pointer;
+  transition: 0.4s;
+  color: #fff;
+}
+.icon-play:hover {
+  font-size: 7.5rem;
+  color: #fff;
 }
 
 /*# sourceMappingURL=main.css.map */
